examples/bad/cookie_injection.mko
fn main() {
    let _ = cookie_make("sid\r\nX-Injected", "value", 60)
}
